[workspace]
members = [
  "crates/render",
  "crates/math",
]

[package]
name = "core"
version = "0.1.0"
authors = ["Harrison Turton <harrisonturton@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.50"
# TODO(@harrisonturton): remove for prod builds
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
anyhow = "1.0.44"
render = { path = "crates/render" }
math = { path = "crates/math" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlProgram",
  "WebGlBuffer",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
