[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "../math" }
layout = { path = "../layout" }
wasm-bindgen = "0.2.63"
js-sys = "0.3.50"
anyhow = "1.0.44"
bytemuck = { version = "1.4", features = [ "derive" ] }
log = "0.4"
console_log = { version = "0.2.0" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlProgram",
  "WebGlBuffer",
  "WebGlUniformLocation",
]
