[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.50"
anyhow = "1.0.44"
bytemuck = { version = "1.4", features = [ "derive" ] }
math = { path = "../math" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlProgram",
  "WebGlBuffer",
  "WebGlUniformLocation",
]
